# bachatabro

./: .gitattributes  .gitignore  ADDING_BACHATA_SONGS.md  AGENTS.md  DEPLOYMENT_STRATEGY.md  HOW_POSES_WORK.md  LICENSE  README.md  SETUP.md  joint_recognition_calibration.md  package-lock.json
.kiro/specs/elevenlabs-voice-coach/: design.md  requirements.md  tasks.md
.kiro/specs/executorch-1.0/: tasks.md
.kiro/specs/executorch-integration/: design.md  (+2 more)
backend/functions/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/functions/src/: __init__.py  elevenlabs.py  gemini.py
backend/functions/src/middleware/: __init__.py  rate_limiter.py  validator.py
backend/functions/tests/: __init__.py  test_elevenlabs_property.py  test_error_handling_property.py  test_gemini_property.py
mobile/: .easignore  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json
mobile/config/: api.ts  coachingPrompts.ts  fallbackPhrases.ts  voiceConfig.ts
mobile/hooks/: index.ts  useVoiceCoach.ts
mobile/services/: assetLoader.ts  database.ts  poseDetection.ts  scoreCalculator.ts
mobile/store/: gameStore.ts  voiceCoachStore.ts
mobile/test/: propertyConfig.ts
mobile/types/: detection.ts  game.ts  voiceCoach.ts
mobile/utils/: angleCalculator.ts
python-tools/: README.md  backfill_pose_confidence.py  batch_process.py  batch_process_yolov8.py  preprocess_video.py  preprocess_video_executorch.py  preprocess_video_yolov8.py  pyproject.toml  setup_models.sh  setup_yolov8.py  video_tools.py  yolov8_pose_model.py
(+83 files in other folders)
